# plyppy

./: README.org  README.txt  pyproject.toml
src/plyppy/: __main__.py
